solveAllIssues